--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -1,15 +1,3 @@
-/* Mobile: 375px
- Desktop: 1440px 
-
- ### Fonts
-
-- Family: [Young Serif](https://fonts.google.com/specimen/Young+Serif)
-- Weights: 400
-
-- Family: [Outfit](https://fonts.google.com/specimen/Outfit)
-- Weights: 400, 600, 700
-*/
-
 :root {
   --white: hsl(0, 0%, 100%);
   --stone-100: hsl(30, 54%, 90%);
@@ -47,7 +35,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 38%;
+  width: 30%;
   margin-block: 10vh;
   padding: 2.5rem;
   background-color: var(--white);
@@ -118,18 +106,24 @@ hr {
   color: var(--stone-150);
 }
 
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
 td {
   border-bottom: 1px solid var(--stone-150);
-  padding-right: 15rem;
-  padding-block: 1rem;
+  padding: 1rem;
+  text-align: left;
 }
 
 td:nth-child(1) {
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 td:nth-child(2) {
   font-weight: bold;
+  padding-right: 1rem;
 }
 
 .no-border > * {
