--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -85,18 +85,19 @@ body {
   border-radius: 1.5em;
   gap: 1.5em;
   text-align: center;
+  box-shadow: 0 .3em .5em var(--slate-500);
 }
 
 .qr-code {
   border-radius: inherit;
 }
 
-h1 {
+.title {
   color: var(--slate-900);
   line-height: 1.25;
 }
 
-p {
+.sub-title {
   color: var(--slate-500);
   margin-bottom: 1.5em;
 }
