--- a/social-links-profile-main/style.css
+++ b/social-links-profile-main/style.css
@@ -61,6 +61,16 @@ h6 {
   isolation: isolate;
 }
 
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+
 /* BASE STYLES */
 
 body {
