Styled progress bar

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -488,6 +488,14 @@ progress::-webkit-progress-value {
     cursor: pointer;
   }
 
+  progress::-webkit-progress-bar {
+    border-radius: 0 0 10px 10px;
+  }
+  
+  progress::-webkit-progress-value {
+    border-radius: 0 10px 10px 10px;
+  } 
+
   .product__text-section {
     padding: 2rem;
     align-self: stretch;
