--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -206,6 +206,7 @@ button {
   color: #0a2f0a;
   box-shadow: 0.2rem 0.2rem #45b081;
   text-transform: uppercase;
+  transition: opacity 0.7s ease-in-out;
 }
 
 button:hover {
