--- a/blog-preview-card/style.css
+++ b/blog-preview-card/style.css
@@ -1,5 +1,3 @@
-/* 1440 375 */
-
 @font-face {
   font-family: Figtree;
   src: local("Figtree"), url("./assets/fonts/Figtree-VariableFont_wght.ttf");
@@ -18,9 +16,12 @@
   --white: hsl(0, 0%, 100%);
   --gray-500: hsl(0, 0%, 42%);
   --gray-950: hsl(0, 0%, 7%);
-  --fs-p: 16px;
   --fw-500: 500;
   --fw-800: 800;
+
+  --text-preset1-fs: 1.5rem;
+  --text-preset2-fs: 1rem;
+  --text-preset3-fs: 0.875rem;
 }
 
 /* RESET */
@@ -34,11 +35,6 @@
 
 * {
   margin: 0;
-}
-
-html,
-body {
-  height: 100%;
 }
 
 body {
@@ -87,36 +83,46 @@ body {
   font-family: "Figtree", sans-serif;
   font-weight: var(--fw-500);
   font-style: normal;
-  font-size: var(--fs-p);
+  font-size: var(--text-preset2-fs);
 }
 
 .card {
-  max-width: 22em;
+  max-width: clamp(20.438rem, 19.183rem + 5.352vw, 24rem);
   background-color: var(--white);
   display: flex;
   flex-direction: column;
-  padding: 1.5em;
-  gap: 1em;
-  border: 0.125em solid var(--gray-950);
-  border-radius: 1.5em;
-  box-shadow: 0.5em 0.5em var(--gray-950);
+  padding: 1.5rem;
+  gap: 0.75rem;
+  border: 2px solid var(--gray-950);
+  border-radius: 1.25rem;
+  box-shadow: 0.5rem 0.5rem var(--gray-950);
 }
 
 .card > img {
-  border-radius: 1em;
+  border-radius: 0.625rem;
+  margin-bottom: 0.75rem;
 }
 
 .category {
   background-color: var(--yellow);
-  padding: 0.5em 1em;
-  border-radius: 0.5em;
+  padding: 0.25rem 0.75rem;
+  border-radius: 0.25rem;
   max-width: fit-content;
-  margin-top: 1em;
+  font-size: var(--text-preset3-fs);
+}
+
+.date {
+  font-size: var(--text-preset3-fs);
+}
+
+.title {
+  font-size: var(--text-preset1-fs);
 }
 
 .title > a {
   text-decoration: none;
   color: var(--gray-950);
+  transition: color 0.5s ease-in-out;
 }
 
 .title > a:hover {
@@ -125,22 +131,22 @@ body {
 
 .sub-title {
   color: var(--gray-500);
-  font-style: italic;
+  font-size: var(--text-preset2-fs);
 }
 
 .profile {
   display: flex;
   align-items: center;
-  gap: 1em;
-}
-
-.profile > img {
-  height: 2em;
-  width: 2em;
+  gap: 0.75rem;
+  margin-top: 0.75rem;
 }
 
 .category,
 .title,
 .name {
   font-weight: var(--fw-800);
+}
+
+b {
+  font-size: var(--text-preset3-fs);
 }
