--- a/four-card-feature-section-master/style.css
+++ b/four-card-feature-section-master/style.css
@@ -99,6 +99,8 @@ article {
   grid-template-rows: auto;
   gap: 1rem;
   place-items: center;
+  max-width: 1440px;
+  margin-inline: auto;
 }
 
 .title {
