--- a/product-list-with-cart-main/src/App.css
+++ b/product-list-with-cart-main/src/App.css
@@ -99,6 +99,8 @@ body {
   font-size: var(--fs);
   background-color: var(--rose-100);
   min-height: 100dvh;
+  max-width: 120rem;
+  margin-inline: auto;
 }
 
 main {
