--- a/product-list-with-cart-main/src/App.css
+++ b/product-list-with-cart-main/src/App.css
@@ -119,6 +119,10 @@ button {
 
 /* Product List */
 
+.product-type {
+  font-size: 3rem;
+}
+
 .products {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
