--- a/multi-step-form-main/src/App.css
+++ b/multi-step-form-main/src/App.css
@@ -147,7 +147,7 @@ legend {
 body {
   min-height: 100dvh;
   background-color: var(--blue-100);
-  font-family: Ubuntu;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
 }
 
